# OpenAI

./: .gitignore  README.md
Agent101AI/agent-101-level-1/: readme.md
Agent101AI/agent-101-level-2/: agent_todo.py  readme.md
Agent101AI/agent-101-level-3/: agent_todo.py
Agent101AI/agent-101-level-4/: agent_todo.py  readme.md
Agent101AI/agent-101-level-5/: agent_memory.json  planner.py  readme.md  reflection.py
Agent101AI/agent-101-level-6/: agent_todo.py
StockAI/: .gitignore  README.md  requirements.txt
StockAI/clients/: python_agent.py  stock_price_agent.py
TutorAI/: sanity.py  triage_demo.py
WeatherAI/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  SECURITY.md  guardrails.py  hello_agent.py  interactive_cli.py  pyproject.toml  readme.md  readme.txt  requirements.txt  streamlit_app.py  utils_units.py  utils_weather.py  weather_agent.py
WeatherAI/.github/workflows/: ci.yml  docker.yml
WeatherAI/examples/: app.py  background.py  handoff_example.py  session_state.py
WeatherAI/tests/: test_units.py
WeatherAI/weather_ai/: cli.py
WeatherAI/weather_ai/agents/: weather_agent.py
WeatherAI/weather_ai/tools/: api.py
WeatherAI/weather_ai/ui/: app.py
WeatherAI/weather_ai/utils/: units.py
agent-101/: .gitignore  readme.md  todos.db
agent-101-Level-2/: todos.db
agent-101-level-1/: agent_todo.py
agent-101-level-2/: readme.md  todos.db
agent-101-level-3/: agent_todo.py  todos.db
agent-101-level-4/: agent_todo.py  readme.md  todos.db
agent-101-level-5/: agent_memory.json  agent_todo.py
(+7 files in other folders)
