[project]
name = "weather-ai"
version = "0.1.0"
description = "Agentic Weather app with Streamlit and OpenAI Agents SDK"
readme = "readme.md"
requires-python = ">=3.9"
dependencies = [
  "openai-agents",
  "streamlit",
  "requests",
  "pandas",
]

[project.scripts]
weather-ai = "weather_ai.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

