[project]
name = "weather-ai"
version = "0.1.0"
description = "Agentic Weather app with Streamlit and OpenAI Agents SDK"
readme = "readme.md"
requires-python = ">=3.9"
dependencies = [
  "openai-agents",
  "streamlit",
  "requests",
  "pandas",
  "plotly",
]

[project.scripts]
weather-ai = "weather_ai.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = "\.(py|pyi)$"

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # isort
  "UP", # pyupgrade
  "B",  # flake8-bugbear
]
ignore = []
fix = true
exclude = ["examples"]
